--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-tic-tac-toe",
+  "homepage": "https://leocapde.github.io/react-tic-tac-toe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,10 +10,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
